# haskell-pgltn-prob

./: README.md  haskell-pig-latin.cabal
app/: Main.hs
src/: PigLatin.hs
test/: Spec.hs
