name:                haskell-pig-latin
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-pig-latin#readme
license:             BSD3
license-file:        LICENSE
author:              CJ Engineering
maintainer:          gwiley@cj.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PigLatin
  build-depends:       base >= 4.7 && < 5
                     , split
  default-language:    Haskell2010

executable haskell-pig-latin-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-pig-latin
  default-language:    Haskell2010

test-suite haskell-pig-latin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-pig-latin
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-pig-latin
